css/style.css
:root {
    --bright: #f5f5f5;
    --dark: #05090c;
    --backgroundColor: #0b1218;
    --darkBackgroundColor: #090f14;
    --primaryColor: #00efff;
    /*--dark: #120f0c;
    --backgroundColor: #201913;
    --darkBackgroundColor: #2e2925;*/
    --navHeight: 8rem;
    --navHeightMobile: 6rem;
    --navHeightNegative: calc(-1 * var(--navHeight));
    --contentHorizontalPadding: 0 min(10vw, 10rem);
    --contentHorizontalMargin: 0 min(10vw, 10rem);
    --contentVerticalPadding: min(10vw, 10rem) 0;
    --gap: 2rem;
}
*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html {
    scroll-behavior: smooth;
    min-width: 300px;
    font-size: 16px;
}
body {
    min-height: 100vh;
    background: var(--backgroundColor);
    color: var(--bright);
    font-weight: 200;
    font-family: "Josefin Sans", sans-serif;
    overflow-x: hidden;
    font-size: 2rem;
}
.text--primary {
    color: var(--primaryColor);
}
.navigation {
    width: 100vw;
    height: var(--navHeight);
    position: sticky;
    background-color: var(--backgroundColor);
    top: 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 3rem 0 3rem;
    transition: top 250ms ease-in-out;
    z-index: 9999;
}
.navigation__logo {
    display: flex;
    height: min(10vw, 4rem);
    width: min(10vw, 4rem);
    min-height: 2rem;
    min-width: 2rem;
    color: var(--primaryColor);
    gap: 1rem;
    transition: color 250ms ease-in-out;
}
@media (hover: hover) {
    .navigation__logo:hover {
        color: var(--bright);
        transition: color 250ms ease-in-out;
    }
}
.navigation__logo:active {
    color: var(--bright);
    transition: color 250ms ease-in-out;
}
.navigation__container {
    display: flex;
    gap: 1rem;
    list-style: none;
}
.navigation__item {
    padding: 1rem;
    text-decoration: none;
    color: var(--bright);
    transition: color 250ms ease-in-out;
}
@media (hover: hover) {
    .navigation__item:hover {
        color: var(--primaryColor);
        transition: color 250ms ease-in-out;
    }
}
.navigation__item:active {
    color: var(--primaryColor);
    transition: color 250ms ease-in-out;
}
.button--primary {
    padding: 1rem;
    text-decoration: none;
    text-align: center;
    color: var(--primaryColor);
    border: 1px solid var(--primaryColor);
    transition: 250ms ease-in-out;
}
@media (hover: hover) {
    .button--primary:hover {
        background-color: var(--primaryColor);
        color: var(--darkBackgroundColor);
    }
}
.button--primary:active {
    background-color: var(--primaryColor);
    color: var(--darkBackgroundColor);
}
.header {
    display: flex;
    gap: 4rem;
    min-height: calc(100vh - var(--navHeight));
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: var(--contentHorizontalPadding);
}
.header__text {
    margin: var(--contentHorizontalMargin);
    max-width: 80rem;
}
.header__socials {
    position: fixed;
    bottom: 0;
    left: min(8vw, 10rem);
    display: flex;
    flex-direction: column;
    gap: var(--gap);
}
.header__socials::after {
    content: "";
    display: block;
    width: 1px;
    height: 10rem;
    margin: 0px auto;
    background-color: var(--bright);
}
.socials__link {
    text-decoration: none;
    color: var(--bright);
    transition: color 250ms ease-in-out;
}
@media (hover: hover) {
    .socials__link:hover {
        color: var(--primaryColor);
    }
}
.socials__link:active {
    color: var(--primaryColor);
}
.content {
    display: flex;
    flex-direction: column;
    padding: var(--contentHorizontalPadding);
    margin: var(--contentHorizontalMargin);
}
.content__section {
    display: flex;
    gap: var(--gap);
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 50vh;
    padding: var(--contentVerticalPadding);
}
.section__title {
    display: flex;
    position: relative;
    white-space: nowrap;
    width: fit-content;
}
.section__title::after {
    content: "";
    position: absolute;
    display: block;
    bottom: 0;
    left: 0;
    height: 1px;
    width: 100%;
    background: var(--primaryColor);
}
.about {
    flex-direction: row;
    align-items: flex-start;
    flex-wrap: wrap;
}
.about__info {
    display: flex;
    gap: var(--gap);
}
.about__text {
    display: flex;
    flex-direction: column;
    gap: var(--gap);
}
.about__image {
    display: flex;
    position: relative;
    height: fit-content;
    background: var(--bright);
    box-shadow: 0 10px 15px 0 var(--dark);
}
.about__image::before {
    content: "";
    position: absolute;
    top: 1rem;
    right: 1rem;
    width: 100%;
    height: 100%;
    border: 1px solid var(--primaryColor);
    z-index: -1;
    transition: 250ms ease-in-out;
}
.about__image:hover::before {
    top: -1rem;
    right: -1rem;
}
.about__image > img {
    position: relative;
    width: min(15vw, 15rem);
    min-width: 6rem;
}
.about__links {
    display: flex;
    justify-content: end;
    gap: var(--gap);
    width: 100%;
}
.projects__container {
    display: grid;
    grid-template-columns: repeat(auto-fill, 30rem);
    gap: var(--gap);
    justify-content: center;
    width: 100%;
}
.projects__card {
    display: flex;
    flex-direction: column;
    background: var(--darkBackgroundColor);
    box-shadow: 0 10px 15px 0 var(--dark);
}
@media (hover: hover) {
    .projects__card:hover::before {
        opacity: 0;
    }
}
.card__image {
    display: flex;
    min-height: 14rem;
    position: relative;
}
.card__image > img {
    width: 100%;
    object-fit: cover;
}
.card__info {
    display: flex;
    flex-direction: column;
    padding: 3rem;
    gap: 1rem;
    flex: 1;
}
.card__links {
    display: flex;
    justify-content: end;
    gap: 1rem;
    flex: 1;
    align-items: flex-end;
}
footer {
    display: flex;
    justify-content: center;
    padding: 4rem;
    background: var(--darkBackgroundColor);
}
@media (max-width: 1280px) {
    body {
        font-size: 1.6rem;
    }
    .projects__container {
        grid-template-columns: 1fr;
    }
}
@media (max-width: 800px) {
    body {
        font-size: 1.2rem;
    }
    .navigation {
        width: 100vw;
        height: var(--navHeightMobile);
        position: fixed;
        top: unset;
        bottom: 0;
        padding: 0;
        gap: 0.3rem;
        justify-content: center;
        background: var(--darkBackgroundColor);
        border-top: 1px solid var(--primaryColor);
        border-bottom: none;
        transition: bottom 250ms ease-in-out;
    }
    .navigation__container {
        gap: 0rem;
    }
    .header__socials {
        display: none;
    }
    .content {
        padding: 0 0.75rem;
        margin: 0 0.75rem;
    }
    .about__info {
        flex-direction: column;
    }
    .about__image {
        align-self: center;
    }
    .about__links {
        justify-content: center;
    }
    .card__info {
        padding: 1.5rem;
    }
    footer {
        padding: 2rem 2rem calc(2rem + var(--navHeightMobile)) 2rem;
    }
}
@media (max-width: 450px) {
    .navigation__item {
        padding: 0.7rem 0.4rem;
    }
    .button--primary {
        padding: 0.5rem;
    }
}
@media (max-width: 350px) {
    body {
        font-size: 0.95rem;
    }
}

